fix Stretches and resize title

--- a/src/components/Wrapper/wrapper.scss
+++ b/src/components/Wrapper/wrapper.scss
@@ -6,7 +6,7 @@
         margin: auto;
         margin-bottom: 10px;
         width: 60%;
-        font-size: 5.5rem;
+        font-size: 3.5rem;
         font-weight: 700;
         line-height: 1.3em;
     }
